--- a/requirements.txt
+++ b/requirements.txt
@@ -20,3 +20,6 @@ huggingface_hub==0.24.5
 accelerate==0.33.0
 openai==1.54.3
 python-dotenv==1.0.0
+# Database and API key management
+supabase==2.9.1
+asyncpg==0.29.0
