--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -13,9 +13,21 @@ on:
       - 'main/**'
       - 'docs/**'
 
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
+
 jobs:
   update-docs:
     runs-on: ubuntu-latest
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     
     steps:
     - name: 🔄 Checkout code
@@ -76,13 +88,20 @@ jobs:
         print(f'🔢 Total endpoints: {stats[\"total_endpoints\"]}')
         "
     
+    - name: 📄 Setup Pages
+      if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master'
+      uses: actions/configure-pages@v4
+    
+    - name: 📦 Upload artifact
+      if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master'
+      uses: actions/upload-pages-artifact@v3
+      with:
+        path: ./docs
+    
     - name: 🚀 Deploy to GitHub Pages
       if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master'
-      uses: peaceiris/actions-gh-pages@v3
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./docs
-        commit_message: '📚 Update API documentation'
+      id: deployment
+      uses: actions/deploy-pages@v4
     
     - name: 💬 Comment on PR
       if: github.event_name == 'pull_request'
