--- a/.github/workflows/provision-tenant.yml
+++ b/.github/workflows/provision-tenant.yml
@@ -20,6 +20,7 @@ on:
 jobs:
   provision:
     runs-on: ubuntu-latest
+    environment: SERVER
     steps:
       - name: Checkout
         uses: actions/checkout@v4
