--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,15 +19,15 @@ jobs:
     environment: SERVER
     
     steps:
-    - name: 🔄 Checkout code
+    - name: Checkout code
       uses: actions/checkout@v4
     
-    - name: 🐳 Install doctl
+    - name: Install doctl
       uses: digitalocean/action-doctl@v2
       with:
         token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
     
-    - name: 🔐 Log in to DigitalOcean Container Registry
+    - name: Log in to DigitalOcean Container Registry
       run: doctl registry login --expiry-seconds 1200
     
     - name: 🏗️ Build container image
@@ -35,12 +35,12 @@ jobs:
         docker build -t $REGISTRY/$IMAGE_NAME:${{ github.sha }} .
         docker build -t $REGISTRY/$IMAGE_NAME:latest .
     
-    - name: 📤 Push image to DigitalOcean Container Registry
+    - name: Push image to DigitalOcean Container Registry
       run: |
         docker push $REGISTRY/$IMAGE_NAME:${{ github.sha }}
         docker push $REGISTRY/$IMAGE_NAME:latest
     
-    - name: 🚀 Deploy to DigitalOcean Droplet
+    - name: Deploy to DigitalOcean Droplet
       uses: appleboy/ssh-action@v1.0.0
       with:
         host: ${{ secrets.DROPLET_HOST }}
@@ -70,6 +70,7 @@ jobs:
             -e GITHUB_PROVISION_WORKFLOW="${{ secrets.PROVISION_WORKFLOW }}" \
             -e GITHUB_REF="${{ secrets.REF }}" \
             -e GH_PROVISION_TOKEN="${{ secrets.GH_PROVISION_TOKEN }}" \
+            -e CP_ENCRYPTION_KEY="${{ secrets.CP_ENCRYPTION_KEY }}" \
             -e SCHOOL_SQL_PATH="/app/prisma/tenant_schema.sql" \
             -e LOG_LEVEL="INFO" \
             registry.digitalocean.com/jon-school/api:latest
@@ -77,7 +78,7 @@ jobs:
           # Clean up old images
           docker image prune -f
     
-    - name: ✅ Deployment Status
+    - name: Deployment Status
       run: |
         echo "🎉 Deployment completed successfully!"
         echo "🌐 API available at: https://api.speechanalyser.com"
