--- a/.github/workflows/provision-tenant.yml
+++ b/.github/workflows/provision-tenant.yml
@@ -59,7 +59,14 @@ jobs:
 
       - name: Install Supabase CLI
         run: |
-          curl -fsSL https://supabase.com/cli/install | sh
+          set -e
+          ARCH=$(uname -m)
+          if [ "$ARCH" = "x86_64" ]; then ARCH=amd64; fi
+          VERSION=$(curl -s https://api.github.com/repos/supabase/cli/releases/latest | grep tag_name | cut -d '"' -f4)
+          URL="https://github.com/supabase/cli/releases/download/${VERSION}/supabase_${VERSION#v}_linux_${ARCH}.deb"
+          curl -fsSL -o supabase.deb "$URL"
+          sudo dpkg -i supabase.deb
+          supabase --version
 
       - name: Run school schema migrations via Supabase CLI
         env:
@@ -72,6 +79,6 @@ jobs:
           ENCODED_OPTS="project%3D$PROJECT_REF"
           DB_URL="postgres://postgres:${DB_PASS}@${HOST}:5432/postgres?sslmode=require&options=${ENCODED_OPTS}"
           echo "DB_URL host=$HOST project=$PROJECT_REF"
-          ./supabase db execute --file app/prisma/tenant_schema.sql --db-url "$DB_URL"
+          supabase db execute --file app/prisma/tenant_schema.sql --db-url "$DB_URL"
 
 
