--- a/.github/workflows/provision-tenant.yml
+++ b/.github/workflows/provision-tenant.yml
@@ -85,23 +85,22 @@ jobs:
           echo "DB user (options): postgres with options=project=$PROJECT_REF"
           echo "Masking DB_PASS"; echo "::add-mask::$DB_PASS"; echo "Length(DB_PASS)=${#DB_PASS}"
           printf "%s" "$DB_PASS" | sha256sum | awk '{print "DB_PASS sha256 (first 8): " substr($1,1,8)}'
-          # URL-encode password (use one-liner to keep YAML clean)
-          ENC_PASS=$(python3 -c "import os,urllib.parse;print(urllib.parse.quote(os.environ.get('DB_PASS','')))" )
+          # Build the single, expected transaction pooler DSN
+          ENC_PASS=$(python3 -c "import os,urllib.parse;print(urllib.parse.quote(os.environ['DB_PASS']))")
           echo "::add-mask::$ENC_PASS"
-          # Attempt 1: username includes project ref (session mode)
-          DB_URL_1="postgres://postgres.${PROJECT_REF}:${ENC_PASS}@${HOST}:6543/postgres?sslmode=require"
-          # Attempt 2: plain username + options=project (fallback)
-          ENCODED_OPTS="project%3D$PROJECT_REF"
-          DB_URL_2="postgres://postgres:${ENC_PASS}@${HOST}:6543/postgres?sslmode=require&options=${ENCODED_OPTS}"
-          echo "DB_URL_1 (sanitized): ${DB_URL_1/:${ENC_PASS}/:***}"
-          echo "DB_URL_2 (sanitized): ${DB_URL_2/:${ENC_PASS}/:***}"
-
-          echo "Checking DB readiness via supabase db pull"; READY=""; for i in $(seq 1 24); do echo "Attempt $i: pull with user=postgres.$PROJECT_REF"; if supabase db pull --db-url "$DB_URL_1" --workdir ./supabase --debug > /dev/null 2>&1; then READY="$DB_URL_1"; break; fi; echo "Attempt $i: pull with options=project=$PROJECT_REF"; if supabase db pull --db-url "$DB_URL_2" --workdir ./supabase --debug > /dev/null 2>&1; then READY="$DB_URL_2"; break; fi; sleep 5; done
-          if [ -z "$READY" ]; then
+          DB_URL="postgresql://postgres.${PROJECT_REF}:${ENC_PASS}@${HOST}:6543/postgres?sslmode=require"
+          echo "Checking DB readiness via supabase db pull"
+          READY=0
+          for i in $(seq 1 120); do
+            echo "Attempt $i: pull with user=postgres.$PROJECT_REF"
+            if supabase db pull --db-url "$DB_URL" --workdir ./supabase --debug > /dev/null 2>&1; then READY=1; break; fi
+            sleep 5
+          done
+          if [ $READY -ne 1 ]; then
             echo "Database not ready after waiting. Exiting." >&2
             exit 1
           fi
 
-          echo "DB ready. Applying migration using: $READY"; mkdir -p supabase/migrations; TS=$(date +%s); cp app/prisma/tenant_schema.sql "supabase/migrations/${TS}_tenant_schema.sql"; supabase db push --db-url "$READY" --workdir ./supabase --yes --debug; echo "Verifying schema..."; supabase db pull --db-url "$READY" --workdir ./supabase --debug | head -n 100
+          echo "DB ready. Applying migration"; mkdir -p supabase/migrations; TS=$(date +%s); cp app/prisma/tenant_schema.sql "supabase/migrations/${TS}_tenant_schema.sql"; supabase db push --db-url "$DB_URL" --workdir ./supabase --yes --debug; echo "Verifying schema..."; supabase db pull --db-url "$DB_URL" --workdir ./supabase --debug | head -n 100
 
 
